<resources>
    <string name="app_name">SuperMemory</string>

    <!-- Labels -->
    <string name="timeLabelT">Time: </string>
    <string name="scoreLabelT">Score: </string>
    <!-- Labels End -->

    <!-- Buttons -->
    <string name="restartBtnT">Restart</string>
    <string name="mainBtnT">Main Menu</string>
    <string name="playBtnT">Single Player</string>
    <string name="multiPlayBtnT">Multi Player</string>
    <string name="creditBtnT">Credits</string>
    <string name="lol">Hello</string>
    <string name="restart">Restart</string>
    <!-- Buttons End -->

</resources>
