<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.supermemory.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_width="389dp"
            android:layout_height="222dp"
            android:layout_gravity="center">

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/playBtnT"
                android:id="@+id/singlePlayer"
                android:onClick="showSinglePlayer"
                android:layout_gravity="center_horizontal|top" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/multiPlayBtnT"
                android:id="@+id/multiPlayer"
                android:onClick="showMultiPlayer"
                android:layout_gravity="center" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/creditBtnT"
                android:id="@+id/credits"
                android:onClick="showCredits"
                android:layout_gravity="center_horizontal|bottom" />
        </FrameLayout>
    </FrameLayout>
</RelativeLayout>
