<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admin.supermemory.SinglePlayActivity"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/mainMenu"
            android:layout_width="117dp"
            android:layout_height="60dp"
            android:layout_gravity="left|bottom"
            android:layout_margin="10dp"
            android:onClick="showMain"
            android:text="@string/mainBtnT" />

        <Button
            android:id="@+id/restartGame"
            android:layout_width="102dp"
            android:layout_height="60dp"
            android:layout_gravity="right|bottom"
            android:layout_margin="10dp"
            android:onClick="showSinglePlayer"
            android:text="@string/restart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeOut"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/timeLabelT"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/scoreOut"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/scoreLabelT"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="8"
            android:rowCount="8">

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="0"
                android:layout_row="0" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="0"
                android:layout_row="1" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="0"
                android:layout_row="2" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="0"
                android:layout_row="3" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="0"
                android:layout_row="4" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="0"
                android:layout_row="5" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="1"
                android:layout_row="0" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="1"
                android:layout_row="1" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="1"
                android:layout_row="2" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="1"
                android:layout_row="3" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="1"
                android:layout_row="4" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="1"
                android:layout_row="5" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="2"
                android:layout_row="0" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="2"
                android:layout_row="1" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="2"
                android:layout_row="2" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="2"
                android:layout_row="3" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="2"
                android:layout_row="4" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="2"
                android:layout_row="5" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="3"
                android:layout_row="0" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="3"
                android:layout_row="1" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="3"
                android:layout_row="2" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="3"
                android:layout_row="3" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="3"
                android:layout_row="4" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="3"
                android:layout_row="5" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="4"
                android:layout_row="0" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="4"
                android:layout_row="1" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="4"
                android:layout_row="2" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="4"
                android:layout_row="3" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="4"
                android:layout_row="4" />

            <ImageButton
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_column="4"
                android:layout_row="5" />

        </GridLayout>

    </FrameLayout>
</LinearLayout>